--- a/Orientation/week-16/day-06/TheReddit/build.gradle
+++ b/Orientation/week-16/day-06/TheReddit/build.gradle
@@ -13,6 +13,11 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.hibernate:hibernate-validator:6.0.2.Final'
+    implementation 'javax.el:javax.el-api:3.0.0'
+    implementation 'org.glassfish.web:javax.el:2.2.6'
+    
+    
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
